--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,5 +6,5 @@
 class="flex flex-col items-center md:flex-row md:justify-center md:gap-5 md:max-w-md md:mx-auto md:my-3"
 >
 <a class="hover:text-yellow-400 md:font-bold md:text-xl" href="#index">Inicio</a>
-<a class="hover:text-yellow-400 md:font-bold md:text-xl" href="/portfolio-astro/#projects">Proyectos</a>
+<a class="hover:text-yellow-400 md:font-bold md:text-xl" href="#projects">Proyectos</a>
 </nav>
