--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -9,7 +9,7 @@ import ImageProyecto5 from "../assets/img/imagen5.png";
 import ImageProyecto6 from "../assets/img/imagen6.png";
 import ImageProyecto7 from "../assets/img/imagen7.png";
 import ImageProyecto8 from "../assets/img/imagen8.png";
-// import ImageProyecto4 from "../assets/img/imagen4.png";
+import ImageProyecto9 from "../assets/img/imagen9.png";
 import ImageProyecto10 from "../assets/img/imagen10.png";
 ---
 
@@ -92,8 +92,8 @@ import ImageProyecto10 from "../assets/img/imagen10.png";
     />
 
     <Project
-      image={ImageProyecto6}
-      links="https://form-db-phi.vercel.app/"
+      image={ImageProyecto9}
+      links="https://form-db-production.up.railway.app/"
       title="Formulario con Acceso a BD"
       description="Este es un formulario que registra usuarios y sus datos en una base de datos"
     />
